Syndicati - Clever Cloud Database Deployment
Changelog:

[NEW]

-Database Deployed to Clever Cloud
-Persistent Login Saving each Restart
-DatabaseService Login Rebuilt to Accomodate to the DB Deployment

[FIXES]

-Lag Free UI while navigating
-Better Data Pulling Logic for faster operations across the app

[WIP]

-Profile Data Loading Times